hack/proxy/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: egress_http
          codec_type: auto
          route_config:
            name: destination_route
            virtual_hosts:
            - name: destination_workload
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: destination_workload
          http_filters:
          - name: envoy.filters.http.wasm
            config:
              config:
                name: "header_augmenting_filter"
                configuration: |
                  {
                    "header_providing_service_cluster": "sidecar",
                    "header_providing_service_authority": "sidecar",
                    "header_cache_expiry": "10s"
                  }
                root_id: "header_augmenting_filter"
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/etc/filter.wasm"
                  allow_precompiled: true
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: destination_workload
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: destination
        port_value: 8080
  - name: sidecar
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: sidecar
        port_value: 8081
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
